// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package metadata.types;

option go_package = "openpitrix.io/openpitrix/pkg/pb/metadata/types;pbtypes";

message PilotConfig {
	string id = 1;
	string host = 2;
	int32 listen_port = 4;
	string log_level = 5;
	int32 for_frontgate_listen_port = 6;
}

message PilotEndpoint {
	string pilot_id = 1;
	string pilot_host = 2;
	int32 pilot_port = 3;
}
